# onset_detector

./: .gitignore  Cargo.toml  Dockerfile  readme.md
src/: detector.rs  lib.rs  utils.rs
src/extractor/: error.rs  mod.rs  set.rs
