[package]
name = "onset_detection"
version = "0.1.0"
authors = ["victor <fedorenko22116@gmail.com>"]
edition = "2018"

[dependencies]
simplemad = "0.9.0"
chrono = "0.4.6"
textplots = "0.4.1"
serde_json = "1.0.39"
gnuplot = "0.0.31"
rustfft = "3.0.0"
num = "0.2.0"
jsonrpc-core = "11.0.0"
jsonrpc-http-server = "11.0"
ordered-float = "1.0"
rayon = "1.1.0"
